Commented all of my code

--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Here I linked my HTML to bootstrap -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+	<!-- Here I linked my HTML to the theme CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- Here I linked the HTML to an override css of my design -->
 	<link rel="stylesheet" type="text/css" href="assets/css/myStyle.css">
+	<!-- Helps with viewing on mobile devices.  -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dylan's Themed Portfolio</title>
 </head>
 <body>
 	
+
+<!-- This container is for my navigation and brand. -->	
 <div class="container">
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
@@ -31,9 +37,10 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 </div>
-
+<!-- This container is for my section and aside area. -->
 <div class="container">
 	<div class="row">
+	<!-- Here I am making the section 9/12 of the parent element wide.  -->
 		<div class="col-sm-9">
 			<section>
 				<h1>Contact</h1>
@@ -56,6 +63,7 @@
 					</div>
 		</section>
 		</div>
+		<!-- Here I am making the aside 3/12 of the parent element wide. -->
 		<div class="col-sm-3">
 			<aside>
 				<h1>Connect With Me</h1>
@@ -70,8 +78,10 @@
 	</div>	
 </div>
 
+<!-- Here I am giving space between my previous container and the footer.  -->
 <div class="push"></div>
 <div class="container">
+<!-- Footer container -->
 	<footer class="footer">
 		<h4>&copy; Copyright 2016 Dylan Richard</h1>
 	</footer>
