--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Here I linked my HTML to bootstrap -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+	<!-- Here I linked my HTML to the theme CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- Here I linked the HTML to an override css of my design -->
 	<link rel="stylesheet" type="text/css" href="assets/css/myStyle.css">
+	<!-- Helps with viewing on mobile devices.  -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Dylan's Themed Portfolio</title>
 </head>
 <body>
-	
+
+
+<!-- This container is for my navigation and brand. -->
 <div class="container">
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
@@ -32,8 +39,11 @@
 	</nav>
 </div>
 
+
+<!-- This container is for my section and aside area. -->
 <div class="container">
 	<div class="row">
+	<!-- Here I am making the section 9/12 of the parent element wide.  -->
 		<div class="col-sm-9">
 			<section>
 				<h3>About Me</h1>
@@ -48,6 +58,7 @@
 					<p>Today, I am working through a coding program to become a Full Stack Developer, utilizing my critical thinking skills developed though years of experience in the work force, and from graduating from UT Tyler. </p>
 			</section>
 		</div>
+		<!-- Here I am making the aside 3/12 of the parent element wide. -->
 		<div class="col-sm-3">
 			<aside>
 				<h3>Connect With Me</h1>
@@ -62,8 +73,11 @@
 	</div>	
 </div>
 
+<!-- Here I am giving space between my previous container and the footer.  -->
 <div class="push"></div>
 <div class="container">
+
+<!-- Footer container -->
 	<footer class="footer">
 		<h4>&copy; Copyright 2016 Dylan Richard</h1>
 	</footer>
